<resources>
    <string name="app_name">Şifreyi Bul</string>
    
    <!-- Game UI -->
    <string name="game_title">ŞİFREYİ BUL</string>
    <string name="game_description">4 haneli gizli sayıyı bulmaya çalış!</string>
    <string name="input_hint">4 haneli bir sayı gir</string>
    <string name="btn_guess">TAHMİN ET</string>
    <string name="btn_new_game">YENİ OYUN</string>
    <string name="btn_clear">SİL</string>
    <string name="btn_theme_hacker">Hacker</string>
    <string name="btn_theme_modern">Modern</string>
    
    <!-- Game Status -->
    <string name="game_started">Oyun başladı! 4 haneli gizli sayıyı tahmin et.</string>
    <string name="attempts_count">Tahmin Sayısı: %d</string>
    <string name="invalid_input">Lütfen 4 haneli bir sayı girin!</string>
    <string name="invalid_input_duplicate">Lütfen farklı rakamlardan oluşan 4 haneli bir sayı girin!</string>
    <string name="guess_result">Tahmin: %s - Devam et!</string>
    <string name="win_message">Tebrikler! %d tahminde doğru sayıyı buldun: %s</string>
    
    <!-- Game History -->
    <string name="history_title">TAHMİN GEÇMİŞİ</string>
    <string name="history_guess">Tahmin</string>
    <string name="history_correct_digits">Doğru Rakam</string>
    <string name="history_correct_positions">Doğru Yer</string>
    
    <!-- Win Dialog -->
    <string name="congratulations">TEBRİKLER!</string>
    <string name="win_dialog_message">Gizli sayıyı buldun!</string>
    <string name="win_attempts_label">Tahmin Sayısı:</string>
    <string name="win_secret_number_label">Gizli Sayı:</string>
    
    <!-- History Popup -->
    <string name="btn_show_history">Tahmin Geçmişi</string>
    <string name="dialog_history_title">Tahmin Geçmişi</string>
    <string name="dialog_close">Kapat</string>
    <string name="no_history_message">Henüz tahmin yapmadınız.\nOyunu oynamaya başlayın!</string>
    
    <!-- Game Rules -->
    <string name="rules_title">NASIL OYNANIR?</string>
    <string name="rule_1">Bilgisayar 4 haneli rastgele bir sayı belirler.</string>
    <string name="rule_2">Tahmininizi girin ve TAHMİN ET tuşuna dokunun.</string>
    <string name="rule_3">Doğru Rakam: Tahmininizde doğru olan rakamların sayısı.</string>
    <string name="rule_4">Doğru Yer: Tahmininizde hem rakam hem de yeri doğru olanların sayısı.</string>
    <string name="rule_5">İpuçlarını kullanarak 4 haneli sayıyı bulmaya çalışın!</string>
    
    <!-- Menu and Dialogs -->
    <string name="menu_new_game">Yeni Oyun</string>
    <string name="menu_rules">Nasıl Oynanır?</string>
    <string name="menu_language">Dil Değiştir</string>
    <string name="menu_about">Hakkında</string>
    <string name="menu_vibration">Titreşim</string>
    <string name="dialog_apply">Uygula</string>
    <string name="dialog_cancel">İptal</string>
    <string name="dialog_theme_title">Tema Seçin</string>
    <string name="dialog_language_title">Dil Seçin</string>
    <string name="dialog_vibration_title">Titreşim Ayarları</string>
    <string name="vibration_enabled">Titreşim Açık</string>
    <string name="vibration_disabled">Titreşim Kapalı</string>
    <string name="history_limit_message">Son %d tahmin gösteriliyor</string>
    
    <!-- Language Options -->
    <string name="language_turkish">Türkçe</string>
    <string name="language_english">English</string>
    <string name="language_change_restart">Dil değişikliği için uygulama yeniden başlatılacak.</string>
    
    <!-- About Dialog -->
    <string name="about_title">Sayı Bulma Oyunu</string>
    <string name="about_version">Versiyon 1.0.0</string>
    <string name="about_developer">Geliştirici: Hakan Özger</string>
    <string name="about_description">4 haneli gizli sayıyı bulma oyunu. Native Android uygulaması olarak Kotlin ile geliştirilmiştir.</string>
    
    <!-- Accessibility -->
    <string name="cd_theme_button">Tema değiştir</string>
    <string name="cd_guess_input">Sayı tahmin giriş alanı</string>
    <string name="cd_guess_button">Tahmin et butonu</string>
    <string name="cd_new_game_button">Yeni oyun butonu</string>
    <string name="cd_menu_button">Menü</string>
    <string name="cd_clear_input">Girdiyi temizle</string>
    <string name="cd_clear_history">Geçmişi temizle</string>
</resources>