<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_new_game"
        android:title="@string/menu_new_game"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_theme"
        android:icon="@drawable/ic_brush"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_language"
        android:title="@string/menu_language"
        android:icon="@drawable/ic_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_rules"
        android:title="@string/menu_rules"
        android:icon="@drawable/ic_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_app_logo"
        app:showAsAction="never" />

</menu>
